--- a/stylelist.css
+++ b/stylelist.css
@@ -11,22 +11,19 @@ ul {
 
 ul li {
   cursor: pointer;
-  position: relative;
+  position: left;
   padding: 12px 8px 12px 40px;
   background: pink;
   font-size: 18px;
   transition: 0.2s;
+width: 40%;
 
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 
 ul li:nth-child(odd) {
   background: #f9f9f9;
+  width: 40%;
 }
 
 ul li:hover {
@@ -38,33 +35,6 @@ ul li.checked {
   background: #888;
   color: #fff;
   text-decoration: line-through;
-}
-
-
-ul li.checked::before {
-  content: '';
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
-}
-
-
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
 }
 
 
@@ -87,7 +57,7 @@ input {
   margin: 0;
   border: none;
   border-radius: 0;
-  width: 75%;
+  width: 15%;
   padding: 10px;
   float: left;
   font-size: 16px;
@@ -96,7 +66,7 @@ input {
 
 .addBtn {
   padding: 10px;
-  width: 25%;
+  width: 5%;
   background: #d9d9d9;
   color: #555;
   float: left;
@@ -109,4 +79,9 @@ input {
 
 .addBtn:hover {
   background-color: #bbb;
+}
+piccat {
+  float: left;
+  position: relative;
+
 }
