--- a/stylelist.css
+++ b/stylelist.css
@@ -1,29 +1,27 @@
-* {
-  box-sizing: border-box;
-}
-
-
 ul {
-  margin: 0;
-  padding: 0;
+  position: absolute;
+     left: 50%;
+     transform: translateX(-50%);
 }
 
 
 ul li {
   cursor: pointer;
-  position: left;
   padding: 12px 8px 12px 40px;
   background: pink;
   font-size: 18px;
   transition: 0.2s;
 width: 40%;
+float:left;
 
 }
 
 
-ul li:nth-child(odd) {
+ul li:nth-child(odd)
+ {
   background: #f9f9f9;
   width: 40%;
+float:left;
 }
 
 ul li:hover {
@@ -48,7 +46,7 @@ ul li.checked {
 
 .header:after {
   content: "";
-  display: table;
+  display: flex;
   clear: both;
 }
 
@@ -59,7 +57,7 @@ input {
   border-radius: 0;
   width: 15%;
   padding: 10px;
-  float: left;
+text-align: center;
   font-size: 16px;
 }
 
@@ -69,19 +67,23 @@ input {
   width: 5%;
   background: #d9d9d9;
   color: #555;
-  float: left;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
-  transition: 0.3s;
   border-radius: 0;
+  text-align: center;
 }
 
 .addBtn:hover {
   background-color: #bbb;
 }
 piccat {
+  text-align: center;
   float: left;
-  position: relative;
-
 }
+p {
+  font-size: 18px;
+  color: #555;
+  front-style: italic;
+}
+
