--- a/stylelist.css
+++ b/stylelist.css
@@ -1,7 +1,7 @@
 ul {
-  position: absolute;
-     left: 50%;
-     transform: translateX(-50%);
+  position: relative;
+     left: 35%;
+list-style-type: none;
 }
 
 
@@ -11,17 +11,15 @@ ul li {
   background: pink;
   font-size: 18px;
   transition: 0.2s;
-width: 40%;
-float:left;
-
+width: 20%;
 }
 
 
 ul li:nth-child(odd)
  {
   background: #f9f9f9;
-  width: 40%;
-float:left;
+  width: 20%;
+
 }
 
 ul li:hover {
@@ -79,11 +77,12 @@ text-align: center;
 }
 piccat {
   text-align: center;
-  float: left;
+  left:40%;
+
 }
 p {
   font-size: 18px;
   color: #555;
+
   front-style: italic;
 }
-
